# GlobePay

./: .gitignore  Cargo.toml  README.md
migrations/: 20240911000100_init.sql  20240911000200_fx_support.sql  20240911000300_fx_double.sql  20240911000400_sessions.sql  20240911000500_add_fees.sql  20240911000600_ai_risk.sql
src/: ai.rs  db.rs  main.rs  routes.rs
templates/: form.html  pay_form.html  processing.html  qr.html  scan_to_pay.html  success.html
